--- a/indeks.html
+++ b/indeks.html
@@ -28,10 +28,10 @@
 
         <div class="row d-flex flex-wrap flex-column align-items-center my-auto">
             <div class="col-sm-6 col-md-6 text-center">
-                <h1>Lorem lorem</h1>
+                <h1>We Ocean</h1>
             </div>
             <div class="col-sm-6 col-md-6 text-center">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident quaerat, excepturi doloremque minus pariatur, aliquid earum, praesentium mollitia aut veniam maiores quis non voluptate reiciendis libero nam. Eaque, commodi cupiditate.</p>
+                <p>Human are 80% made of water and 67% water in the world. Without ocean we are Nothing cause we are ocean it self</p>
             </div>
             <div class="col-sm-6 col-md-6 text-center pt-2">
                 <button class="btn btn-primary">Take Action</button>
